apps/base/monitoring-prometheus-operator/deploy/operator/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus-operator
  labels:
    prometheus-target: prometheus-operator
spec:
  clusterIP: None
  ports:
  - name: https
    port: 8443
    targetPort: https
  selector:
    app.kubernetes.io/name: prometheus-operator
    app.kubernetes.io/component: controller
